<resources>
    <string name="app_name">作業七：黃子洋</string>
    <string name="btn_roll_dice">擲骰子</string>
    <string name="dice_result">點數：</string>
    <string name="title_activity_maps">Map</string>
    <string name="jump_to_next_activity">Jump to next activity</string>
    <string name="todo">TODO</string>

    <string name="action_settings">Settings</string>

    <string name="player_win">恭喜，你贏了！</string>
    <string name="player_lose">很可惜，你輸了！</string>
    <string name="player_draw">雙方平手！</string>

    <string name="result">判定輸贏：</string>

    <string name="total_set">全部局數：</string>
    <string name="player_win_set">玩家贏：</string>
    <string name="comupter_win_set">電腦贏：</string>
    <string name="draw">平手：</string>

    <string name="btn_show_result">顯示結果</string>
    <string name="btn_hidden_result">隱藏結果</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
