<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView android:id="@+id/imgRollingDice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/dice03"
        android:contentDescription="@string/todo" />

    <TextView android:id="@+id/txtDiceResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_result"
        android:textSize="20sp"
        android:layout_marginTop="15dp" />

    <Button android:id="@+id/btnRollDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_roll_dice"
        android:textSize="15sp"
        android:layout_marginTop="5dp" />

    <Button android:id="@+id/btnShowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_result"
        android:textSize="15sp"
        android:layout_marginTop="5dp" />

    <Button android:id="@+id/btnHiddenResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hidden_result"
        android:textSize="15sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnJump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/jump_to_next_activity" />

</LinearLayout>
