<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_set" />

        <EditText
            android:id="@+id/edtCountSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_win_set" />

        <EditText
            android:id="@+id/edtCountPlayerWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comupter_win_set" />

        <EditText
            android:id="@+id/edtCountComWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw" />

        <EditText
            android:id="@+id/edtCountDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

</LinearLayout>
